--- a/portfoliocss.css
+++ b/portfoliocss.css
@@ -15,7 +15,7 @@ a:visited{
     font-family: 'Andada Pro', serif;
     color:black;
     letter-spacing: 0.14em;
-    background-image:url("Images/leaf.jpg");
+    background-image:url("Images/plantpot.jpg");
     background-repeat: no-repeat;
     background-size: cover;
     padding: 10px;
